fixed some issue

--- a/contact.html
+++ b/contact.html
@@ -19,9 +19,9 @@
 
             <a href="/index.html">Home</a>
            
-            <a href="/Skill/skill.html">Skills</a>
-            <a href="/Education/edu..html">Education</a>
-            <a href="/Experience/exp.html" >Experience</a>
+            <a href="/skill.html">Skills</a>
+            <a href="/edu..html">Education</a>
+            <a href="/exp.html" >Experience</a>
             <a href="#" class="active">Contact</a>
 
         </nav>
