--- a/exp.html
+++ b/exp.html
@@ -19,10 +19,10 @@
 
             <a href="/index.html">Home</a>
            
-            <a href="/Skill/skill.html">Skills</a>
-            <a href="/Education/edu..html">Education</a>
+            <a href="/skill.html">Skills</a>
+            <a href="/edu..html">Education</a>
             <a href="#" class="active">Experience</a>
-            <a href="/contact/contact.html">Contact</a>
+            <a href="/contact.html">Contact</a>
 
         </nav>
 
