--- a/skill.html
+++ b/skill.html
@@ -20,9 +20,9 @@
             <a href="/index.html">Home</a>
            
             <a href="#" class="active">Skills</a>
-            <a href="/Education/edu..html">Education</a>
-            <a href="/Experience/exp.html">Experience</a>
-            <a href="/contact/contact.html">Contact</a>
+            <a href="/edu..html">Education</a>
+            <a href="/exp.html">Experience</a>
+            <a href="/contact.html">Contact</a>
 
         </nav>
 
