--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
 
             <a href="#" class="active">Home</a>
            
-            <a href="/Skill/skill.html">Skills</a>
-            <a href="/Education/edu..html">Education</a>
-            <a href="/Experience/exp.html">Experience</a>
-            <a href="/contact/contact.html">Contact</a>
+            <a href="/skill.html">Skills</a>
+            <a href="/edu..html">Education</a>
+            <a href="/exp.html">Experience</a>
+            <a href="/contact.html">Contact</a>
 
         </nav>
 
